# VulkanConfigurator

./: .gitignore  CMakeLists.txt  README.md  StructExtractor.hpp  StructureTypes.cpp  StructureTypes.hpp  VulkanDebug.cpp  VulkanDebug.h  VulkanDevice.hpp  VulkanInitializers.hpp  VulkanSwapChain.hpp  VulkanTools.h  VulkanUIOverlay.h  benchmark.hpp  ctre.hpp  dynamicuniformbuffer.cpp  keycodes.hpp  main.cpp  readme.txt  triangle  triangle.cpp  vulkan_type_list.hpp  vulkanexamplebase.cpp  vulkanexamplebase.h
magic_get/include/boost/: pfr.hpp
magic_get/include/boost/pfr/: flat.hpp  precise.hpp
magic_get/include/boost/pfr/detail/: cast_to_layout_compatible.hpp  core14.hpp  core14_classic.hpp  core14_loophole.hpp  core17.hpp  core17_generated.hpp  detectors.hpp  fields_count.hpp  flat_tie_from_structure_tuple.hpp  for_each_field_impl.hpp  functional.hpp  io.hpp  make_flat_tuple_of_references.hpp  make_integer_sequence.hpp  offset_based_getter.hpp  sequence_tuple.hpp  size_array.hpp  stdtuple.hpp  tie_from_structure_tuple.hpp
magic_get/include/boost/pfr/flat/: core.hpp  functions_for.hpp  functors.hpp  global_ops.hpp  io.hpp  ops.hpp  tuple_size.hpp
magic_get/include/boost/pfr/precise/: core.hpp  functions_for.hpp  functors.hpp  global_ops.hpp  io.hpp  ops.hpp  tuple_size.hpp
src/: ArenaContainers.cpp  ArenaContainers.hpp  CMakeCache.txt  CMakeLists.txt  ChildTypeParentFieldMatching.cpp  ChildTypeParentFieldMatching.hpp  ChildTypeParentFieldMatching.inl  EnumBitOpSplitter.hpp  EnumBitOpSplitter.inl  EnumBitOpSplitterBase.cpp  EnumBitOpSplitterBase.hpp  ErrorState.hpp  FieldExtractor.cpp.bak  FieldExtractor.hpp  FieldExtractor.inl  Interface.hpp  Makefile  ParentChildFieldLink.cpp  ParentChildFieldLink.hpp  StrHashTable.hpp  StructFieldExtractor.hpp  StructFieldExtractor.inl  StructureTypes.hpp  TypeAllocators.hpp  UtilityTypes.hpp  VulkanAliasList.hpp  VulkanConfigurator.cpp  VulkanConfigurator.hpp  VulkanConfigurator.inl  VulkanEnumMap.hpp  VulkanMap.cpp  VulkanMap.hpp  VulkanMap.inl  VulkanTypeList.hpp  XmlProcessor.cpp  XmlProcessor.hpp  XmlProcessor.inl  char_array_limits.hpp  cmake_install.cmake  compile_time_string_hash.hpp  (+23 more)
src/boost_mpl_vector_range_ext/: generate_ext_vector_range.py  vector60.hpp  vector70.hpp  vector80.hpp  vector90.hpp
src/cxx_function/: cxx_function.hpp  function2.hpp
src/folly/: CMakeLists.txt
src/folly/CMake/: folly-deps.cmake
src/folly/src/: CMakeLists.txt  CPortability.h  Conv.h  CpuId.h  Demangle.h  Exception.h  ExceptionString.h  Expected.h  FBString.h  FileUtil.cpp  FileUtil.h  Format-inl.h  Format.cpp  Format.h  FormatArg.h  Function.h  Function.h.bak  Indestructible.h  LockTraits.h  MapUtil.h  Memory.h  Optional.h  Portability.h  Preprocessor.h  Range.h  ScopeGuard.h  SharedMutex.h  String-inl.h  String.h  Synchronized.h  ThreadLocal.h  Traits.h  Utility.h  folly-config.h
src/folly/src/concurrency/: CacheLocality.cpp  CacheLocality.h
src/folly/src/container/: Array.h  Foreach-inl.h  Foreach.h  SparseByteSet.h
src/folly/src/detail/: AtFork.cpp  AtFork.h  FileUtilDetail.h  Futex-inl.h  Futex.h  RangeCommon.cpp  RangeCommon.h  RangeSse42.cpp  Singleton.h  Sse.cpp  Sse.h  StaticSingletonManager.cpp  StaticSingletonManager.h  ThreadLocalDetail.cpp  ThreadLocalDetail.h
src/folly/src/functional/: ApplyTuple.h  Invoke.h
src/folly/src/hash/: Hash.h  SpookyHashV1.cpp  SpookyHashV2.cpp
src/folly/src/lang/: Align.h  Assume.h  Bits.h  CheckedMath.h  ColdClass.h  Exception.h  Pretty.h  SafeAssert.cpp  SafeAssert.h  TypeInfo.h
src/folly/src/memory/: Arena.h  Malloc.h  ThreadCachedArena.cpp  ThreadCachedArena.h
src/folly/src/memory/detail/: MallocImpl.cpp  MallocImpl.h
src/folly/src/net/: NetOps.cpp  NetOps.h  NetworkSocket.h
src/folly/src/net/detail/: SocketFileDescriptorMap.cpp  SocketFileDescriptorMap.h
src/folly/src/portability/: Asm.h  Builtins.cpp  Builtins.h  Config.h  Constexpr.h  Fcntl.cpp  Fcntl.h  Malloc.cpp  Malloc.h  PThread.h  Sched.cpp  Sockets.cpp  Sockets.h  String.cpp  String.h  SysFile.cpp  SysResource.cpp  SysResource.h  SysStat.cpp  SysStat.h  SysUio.cpp  SysUio.h  Time.cpp  Time.h  Unistd.cpp  Unistd.h
src/folly/src/synchronization/: CallOnce.h  MicroSpinLock.h  ParkingLot.h  SanitizeThread.cpp  SanitizeThread.h
src/folly/src/synchronization/detail/: Sleeper.h
src/folly/src/system/: ThreadId.h
unittests/: ApplicationInterfaceTest.cpp  ApplicationInterfaceTest.hpp  ArenaContainersTest.cpp  ArenaContainersTest.hpp  CMakeLists.txt  MemoryAllocTest.cpp  MemoryAllocTest.hpp  StringHashTableTest.cpp  StringHashTableTest.hpp  StringHashTest.cpp  StringHashTest.hpp  StructDiffIdsPopulatedTest.cpp  StructDiffIdsPopulatedTest.hpp  StructFieldPopulatedTest.cpp  StructFieldPopulatedTest.hpp  StructIdFieldPopulatedTest.cpp  StructIdFieldPopulatedTest.hpp  StructMapPopulatedTest.cpp  StructMapPopulatedTest.hpp  TypeHashTest.cpp  TypeHashTest.hpp  XmlParserTest.cpp  XmlParserTest.hpp  main.cpp  vulkan_settings_field2ids.xml  vulkan_settings_fieldidtest.xml  vulkan_settings_maptest.xml  vulkan_settings_orenumcomboval.xml  vulkan_settings_reuseids.xml  vulkan_settings_testxml.xml
